# pagai

./: .gitignore  CMakeLists.txt  COPIER  COPYING  ChangeLog  README  TODO.org  TODO.txt  assert.h  autoinstall.sh  common.mk  pagai_assert.h
WCET/: benchmarks.tex  benchmarkslist.tex  generateSMTwcet.py  go.sh  smtopt.smt
WCET/LCTES14/: cruise-control.bc  digital-stopwatch.bc
WCET/smtopt/: Makefile
apron/: apron-0.9.10.tgz
apron/examples/: Makefile  example1.c  myexample.cpp  widening.cpp
arrays/: copy_array.scalar.c  copy_array_check.concurinterproc  copy_array_check1.redlog  copy_array_check2.redlog  copy_array_check3.redlog  dutch_flag_v2.concurinterproc  dutch_flag_v3.concurinterproc  dutch_flag_v4.concurinterproc  dutch_flag_v4.py  fill_array_2d.concurinterproc  fill_array_2d_come_back.concurinterproc  fill_array_2d_triangle_v3.concurinterproc  fill_array_2d_triangle_v3.redlog  fill_array_2d_v3.concurinterproc  fill_array_i.concurinterproc  fill_array_slice.nbac  fill_even_array.concurinterproc  fill_even_array.redlog  find_min.concurinterproc  sentinel.concurinterproc  sentinel.redlog  sentinel2.concurinterproc  sentinel3.concurinterproc  sentinel3.redlog  sentinel4.concurinterproc  sentinel4.py  sentinel4.redlog  sort.concurinterproc  sort.py  sort.redlog  sort_inv.redlog  sort_min.concurinterproc  sort_min2.concurinterproc  sort_outer.concurinterproc
article/: .gitignore  .nfs000000000013661900000005  gpl2011.tex
benchmarks/cBench/: Makefile  Makefile.model  config.mk
benchmarks/gnu/: Makefile  Makefile.model  all_analyze_domain.sh  all_analyze_nounroll.sh  all_clean.sh  config.mk  diff_analyzer.sh  diff_analyzer_nounroll.sh  diff_domain.sh  diff_domain2.sh  diff_narrowing.sh
benchmarks/test/: Makefile
benchmarks/wcet/: Makefile  diff_compare.sh  diff_narrowing.sh
benchmarks/wcet_base/: Makefile  TDF.c
ex/: .gitignore  Makefile  aiopt.c  analyzer-bc.sh  analyzer-bc2.sh  analyzer.sh  arraysum.c  arraysum2.c  arraysum_int.c  boustrophedon.c  boustrophedon_expansed.c  bug3.c  c_address_computation.c  compile_llvm.sh  ex2.c  ex2b.c  ex2c.c  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c  ex8.cc  exopt.c  exthao.c  gopan.c  gopan_assert.c  gopan_assert2.c  gopan_global.c  halbwachs.c  memory.c  nested_loop.c  nested_loop4.c  overflow.c  pagai.sh  rate_limiter.c  rate_limiter_loop.c  run_example.py  run_examples.sh  simple_loop_float.c  (+4 more)
ex/aws_CAV13/: 03.c  05.c  07.c  09.c  12.c  15.c  19.c  20.c  24.c  31.c  33.c  35.c  pldi08.c  pldi082_unbounded.c  substring1.c  xy10.c
ex/demo/: sqrtssa.bc
globaltolocal/: Makefile
opt/: README  optbr.cc
papers/PLDI2012/: Makefile  dmabbrvnat.bst  dmnatbib.sty  gopan_reps.bc  gopan_reps.c  implicitization.bib  implicitization.tex  response_PLDI2012.txt  reviews_PLDI2012.html  rlim_int.c  rlim_int2.c  rlim_int_loop.c  script.gnu  table1.tex  table_domain.tex  table_time.tex  techniques.eps  techniques.tex
papers/PLDI2012/algo/: algo-combined.tex  compute-paths.tex  path-focusing.tex
papers/PLDI2012/figures/: gopan_reps.eps  gopan_reps.fig
papers/PLDI2012/gnuplot/: data
papers/SAS2012/: .gitignore  Makefile  abstract.tex  dmplainnat.bst  gopan_reps.c  implicitization.aux  implicitization.bbl  implicitization.bib  implicitization.blg  implicitization.out  implicitization.tex  implicitization.tex~  implicitization_article.tex  implicitization_lmcs.tex  reviews.org  rlim_int.c  rlim_int2.c  rlim_int_loop.c  table1.tex  table_domain.tex  table_time.tex
papers/SAS2012/algo/: algo-combined.tex  compute-paths.tex
papers/SAS2012/figures/: gopan_reps.eps  techniques.gnuplot  techniques.gnuplot~
papers/SAS2012/gnuplot/: techniques.eps  techniques.gnuplot  techniques.gnuplot~  techniques.tex
papers/SAS2012/lncs/: .gitattributes
papers/TAPAS2012/: Makefile  dmabbrvnat.bst  entcs.cls  entcsmacro.sty  pagai.bib  pagai.tex  table1.tex  table_time.tex
presentation/: .gitignore  GDR-GPL11.tex  Makefile  asopt.tex  gopan_assert.c  halbwachs-simple.c  moy-slides.sty  pagai.tex  presentation.tex  saarbruck.tex  saarbrucken.tex  soutenance.tex  synchrone.tex  table_time.tex  techniques.gnuplot  techniques.tex  wcet.gnuplot
report/: .gitignore  algo.tex  misc.tex  report.bib  report.tex  verimagstudent.sty
report/images/: Ujf-80.ps  cnrs-80.ps  inpg.eps  logoverimag.ps
scripts/: build_graph_svcomp.py  build_html_svcomp.py  build_table_domains.py  build_table_domains_time.py  build_table_narrowing.py  build_table_svcomp.py  compile_llvm.sh  extract_svcomp_result.py  pagai.sh  process_results.py  process_results.sh  process_results_domains.py  process_results_svcomp.py  search_bcfiles.sh
simpl/: BoolSimpl.cc  BoolSimpl.h  Makefile
src/: .gitignore  AI.cc  AI.h  AIClassic.cc  AIClassic.h  AIGopan.cc  AIGopan.h  AIGopan2.cc  AIGopan2.h  AIGuided.cc  AIGuided.h  AISimple.cc  AISimple.h  AIdis.cc  AIdis.h  AIopt.cc  AIopt.h  AIopt_incr.cc  AIopt_incr.h  AIpass.cc  AIpass.h  AIpf.cc  AIpf.h  AIpf_incr.cc  AIpf_incr.h  Abstract.cc  Abstract.h  AbstractClassic.cc  AbstractClassic.h  AbstractDisj.cc  AbstractDisj.h  AbstractGopan.cc  AbstractGopan.h  AbstractMan.cc  AbstractMan.h  AnalysisPass.cc  AnalysisPass.h  Analyzer.cc  Analyzer.h  CMakeLists.txt  (+89 more)
ter/ex/: .compile_llvm.sh.swp  compile_llvm.sh
ter/new/: Makefile  SMTBackend.cc  SMTBackend_decl.cc  SMTBackend_decl.h  main.cc
ter/src/: Makefile  SMTBackend.cc  SMTBackend.h  SMTBackend_decl.cc  SMTBackend_decl.h  execute.cc  execute.h
